# qbittorrent-rust

./: .gitmodules  Cargo.toml  README.md
proc-macros/: Cargo.toml
proc-macros/src/: lib.rs
proc_macros/: Cargo.toml
proc_macros/src/: lib.rs
proc_macros_qbittorrent_rust/: Cargo.toml
qbittorrent-rust/: Cargo.toml
qbittorrent-rust/src/: lib.rs  macros.rs
qbittorrent-rust/src/api_fns/: mod.rs
qbittorrent-rust/src/api_fns/application/: app.rs  app_preferences.rs  mod.rs
qbittorrent-rust/src/api_fns/log/: logs.rs
qbittorrent-rust/src/api_fns/rss/: rss.rs
qbittorrent-rust/src/api_fns/search/: search.rs
qbittorrent-rust/src/api_fns/sync/: sync.rs
qbittorrent-rust/src/api_fns/torrents/: add_torrent.rs  info.rs  mod.rs  tests.rs  torrent_managing_misc.rs  (+1 more)
qbittorrent-rust/src/core/: api.rs  cookie.rs  creds.rs  mod.rs  tests.rs
qbittorrent-rust/src/error_handling/: error_type.rs  errors.rs  mod.rs
qbittorrent-rust/src/misc/: mod.rs
qbittorrent_rust/: Cargo.toml
qbittorrent_rust/src/: lib.rs
qbittorrent_rust/src/api_fns/: mod.rs
qbittorrent_rust/src/api_fns/application/: mod.rs
qbittorrent_rust/src/api_fns/log/: logs.rs
qbittorrent_rust/src/api_fns/rss/: rss.rs
qbittorrent_rust/src/api_fns/search/: search.rs
qbittorrent_rust/src/api_fns/sync/: sync.rs
qbittorrent_rust/src/api_fns/torrents/: add_torrent.rs  info.rs  torrent_managing_misc.rs
qbittorrent_rust/src/api_fns/transfer_info/: mod.rs
qbittorrent_rust/src/core/: api.rs  cookie.rs
qbittorrent_rust/src/error_handling/: error_type.rs
qbittorrent_rust/src/misc/: sep_vec.rs
(+1 files in other folders)
