[package]
name = "qbittorrent_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.9", features = ["blocking", "multipart", "json"] }
tokio = { version = "1.41.1", features = ["full"] } 
serde_json = "1.0.132"
serde = { version = "1.0.215", features = ["serde_derive"] }
proc_macros = { path = "../proc_macros", version = "0.1.3"}