[package]
name = "qbittorrent_rust"
version = "0.1.3"
edition = "2021"
description = "An asynchronous library to interface with the qbittorrent WeBUI API"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/confused-ace-noises/qbittorrent-rust"
keywords = ["qbit", "qbittorrent", "torrent", "torrents", "bittorrent"]
categories = ["asynchronous", "api-bindings"]

[dependencies]
reqwest = { version = "0.12.9", features = ["blocking", "multipart", "json"] }
tokio = { version = "1.41.1", features = ["full"] } 
serde_json = "1.0.132"
serde = { version = "1.0.215", features = ["serde_derive"] }
proc_macros_qbittorrent_rust = "0.1.5"

[profile.release]
opt-level = 3
